tests/fixtures/semantics/invalid/return_unknown_error_tag.ora
fn bar() -> !u32 | MyError {
    return error.OtherError;
}


